Adding assets for particle effetc Adding logic for infinite platforms

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head> 
-        <style>* {padding: 0; margin: 0}</style>
+        <style>* {padding: 0; margin: 0; background-color: black}</style>
     </head>
 
     <body> 
